--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.scss
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.scss
@@ -1,13 +1,12 @@
-// =====================
-// RESET CSS
-// =====================
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-// =====================
-// HEADER
-// =====================
+$primary-blue: #2563eb;
+$secondary-blue: #3b82f6;
+$dark-blue: #1e40af;
+$accent-blue: #60a5fa;
+
 .header {
   top: 0;
   z-index: 99;
@@ -105,7 +104,7 @@
       font-size: 1.6rem;
       width: 100%;
       height: 40px;
-      background: #04aa6d;
+      background: $primary-blue;
       color: #ffffff;
       border: none;
       cursor: pointer;
@@ -113,7 +112,7 @@
       transition: background 0.3s ease-in-out;
 
       &:hover {
-        background: #02774b;
+        background: $dark-blue;
       }
     }
   }
@@ -152,7 +151,7 @@
 
     &.active {
       color: #ffffff;
-      background: #04aa6d;
+      background: $primary-blue;
     }
   }
 }
@@ -164,7 +163,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #00834e;
+  background-color: $dark-blue;
   color: white;
   padding: 15px 20px 15px 20px;
 
@@ -191,7 +190,7 @@
   }
 
   .quick-input {
-    background-color: #02a678;
+    background-color: $secondary-blue;
     border: none;
     padding: 10px 15px;
     color: white;
@@ -201,7 +200,7 @@
     transition: 0.3s;
 
     &:hover {
-      background-color: #028f68;
+      background-color: $dark-blue;
     }
   }
 }
@@ -382,7 +381,7 @@ form {
   button {
     margin-top: 20px;
     padding: 15px;
-    background: #04aa6d;
+    background: $primary-blue;
     color: white;
     border: none;
     cursor: pointer;
@@ -390,7 +389,7 @@ form {
     transition: 0.3s;
 
     &:hover {
-      background: #038658;
+      background: $dark-blue;
     }
   }
 }
@@ -527,12 +526,12 @@ form {
         }
 
         &.continue-btn {
-          background-color: #e74c3c;
+          background-color: $primary-blue !important;
           border: none;
           color: white;
 
           &:hover {
-            background-color: #c0392b;
+            background-color: $dark-blue !important;
           }
         }
       }
